<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/selection_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=" "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_city"
        app:layout_constraintEnd_toEndOf="@+id/selection_city"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="@+id/selection_city"
        app:layout_constraintTop_toBottomOf="@+id/selection_city" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="23dp">

        <Button
            android:id="@+id/city_abdulino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="144dp"
            android:text="@string/abdulino" />

        <Button
            android:id="@+id/city_abzakovo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abzakovo" />

        <Button
            android:id="@+id/city_anapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anapa" />

        <Button
            android:id="@+id/city_ufa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ufa" />

        <CheckBox
            android:id="@+id/pressure"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/pressure" />

        <CheckBox
            android:id="@+id/humidity"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/humidity" />

        <CheckBox
            android:id="@+id/wind_speed"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/wind_speed" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>